--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  cloud_firestore: ^3.5.0
+  firebase_core: ^1.24.0
+  firebase_storage: ^10.3.10
+  firebase_auth: ^3.11.1
+  firebase_analytics: ^9.3.7
 
 dev_dependencies:
   flutter_test:
