--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_storage: ^10.3.10
   firebase_auth: ^3.11.1
   firebase_analytics: ^9.3.7
+  firebase_messaging: ^13.1.0
 
 dev_dependencies:
   flutter_test:
